--- a/server/public/views/nav.html
+++ b/server/public/views/nav.html
@@ -1,5 +1,6 @@
 <div class="topnav">
-    <a ng-href="#!/">Home</a>
-    <a ng-href="#!/movies">Movies</a>
-    <a ng-href="#!/genres">Genres</a>
-</div>
+        <a href="#!/">Home</a>
+        <a href="#!/movies">Movies</a>
+        <a href="#!/genres">Genres</a>
+
+    </div>
