Genre page template

--- a/server/public/views/genres.html
+++ b/server/public/views/genres.html
@@ -1,2 +1,35 @@
 <h1>Genres</h1>
 
+<div class="container">
+
+<!-- Add a genre -->
+<div class="genres">
+    <h3>Add a Genre</h3>
+    <input required type="text" ng-model="vm.addNewSale.cost" placeholder="Genre to Add">
+
+
+    <button class="btn btn-info" ng-click="vm.addNewProperty(vm.addNewSale)">Submit</button>
+</div>
+
+ <!-- Movie cards -->
+ <div class="card-deck">
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4" style="width: 18rem;">
+                    <div class="Genres">
+                        <h4 class="card-title">Genre Name</h4>
+                        <h6 class="card-text">Number of Movies in the Genre</h6>
+                        
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- above - end row class -->
+    </div>
+    <!-- above - end card class -->
+
+
+
+</div>
+<!-- above -- end container -->
