--- a/server/public/views/movies.html
+++ b/server/public/views/movies.html
@@ -16,15 +16,15 @@
     <div class="card-deck">
         <div class="card">
             <div class="row">
-                <div class="col-md-4" style="width: 18rem;">
-                    <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZu2kQMtj4J9cZr7ndlz9fXadT1kLpC0F0OErHA4Sfgpqb9GJ432mdRg"
+                <div class="col-md-4" ng-repeat="movie in vm.movieArray" style="width: 18rem;">
+                    <img class="card-img-top" src="{{movie.image}}"
                         alt="Card image cap">
-                    <div class="Sales">
-                        <h4 class="card-title">Movie Title</h4>
-                        <h6 class="card-text">Genre</h6>
-                        <h6 class="card-text">Release Date</h6>
-                        <p class="footer">Run Time</p>
-                        <button type="button" ng-click="sale in vm.deleteSale" class="btn btn-info">Delete this
+                    <div class="movie-cards">
+                        <h4 class="card-title">{{movie.title}}</h4>
+                        <h6 class="card-text">{{movie.genre}}</h6>
+                        <h6 class="card-text">{{movie.release_date}}</h6>
+                        <p class="footer">{{movie.run_time}}</p>
+                        <button type="button" ng-click="movie in vm.deleteMovie" class="btn btn-info">Delete this
                             Property</button>
                     </div>
                 </div>
@@ -36,5 +36,5 @@
 </div>
 <!-- above - end container class -->
 
-
+<pre>{{vm | json }}</pre>
 </div>
