Made some edits to SQL tables for functionality and readability

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -37,10 +37,10 @@ body, html {
     color: white;
 }
 
-,card-footer{
+/* ,card-footer{
     background-color:  deepskyblue;
     color: white;
-}
+} */
 
 h2 {text-align: center};
 
