--- a/server/public/views/genres.html
+++ b/server/public/views/genres.html
@@ -1,26 +1,28 @@
-<h1>Genres</h1>
+<!-- <h1>Genres</h1> -->
 
 <div class="container">
 
-<!-- Add a genre -->
-<div class="genres">
-    <h3>Add a Genre</h3>
-    <input required type="text" ng-model="vm.addNewGenre.genre" placeholder="Genre to Add">
+    <!-- Add a genre -->
+    <div class="genres">
+        <h2>Add a Genre to the Library:</h2>
+        <input required type="text" ng-model="vm.addNewGenre.genre" placeholder="Genre to Add">
 
 
-    <button class="btn btn-info" ng-click="vm.addNewProperty(vm.addNewSale)">Submit</button>
-</div>
+        <button class="btn btn-secondary" ng-click="vm.addNewProperty(vm.addNewSale)">Submit</button>
+    </div>
 
- <!-- Genre cards -->
- <div class="card-deck">
-        <div class="card">
+    <!-- Genre cards -->
+    <div class="card-deck">
+        <div class="card-body">
             <div class="row">
                 <div class="col-md-4" ng-repeat="genre in vm.genreArray" style="width: 18rem;">
                     <div class="Genres">
-                        <h4 class="card-title">{{genre.genre}}</h4>
-                        <h6 class="card-text">{{genre.count}}</h6>
-                        
-                        
+                        <div class="card border=secondary mb-3">
+                            <div class="text-center">
+                                <h4 class="card-title">{{genre.genre}}</h4>
+                                <h6 class="card-text">Number of movies in this genre: {{genre.count}}</h6>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
