--- a/server/public/views/nav.html
+++ b/server/public/views/nav.html
@@ -1,5 +1,5 @@
 <div class="topnav">
-        <a href="#!/">Home</a>
+        <!-- <a href="#!/home">Home</a> -->
         <a href="#!/movies">Movies</a>
         <a href="#!/genres">Genres</a>
 
