--- a/server/public/views/movies.html
+++ b/server/public/views/movies.html
@@ -19,6 +19,7 @@
     </div>
 
     <!-- Movie cards -->
+    <h6>Genre Categories:<br> 1 - Documentary <br> 2 - Comedy<br> 3 - Rom-Com <br> 4 - Action <br> 5 - Superhero <br> 6 - Sci-Fi <br> 7 - Holiday <br> 8 - Classic</h6>
     <div class="card-deck">
         <div class="card-body">
             <div class="row">
